[project]

name = "pyvoog"
version = "0.1.0"
authors = [
  { name="Tambet Arak", email="tambet@voog.com" },
]
description = "A Model-Controller web framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "blinker~=1.6.2",
  "deepmerge~=0.3.0",
  "flask~=2.0.3",
  "jwt~=1.2.0",
  "marshmallow~=3.12.2",
  "setuptools~=70.3.0",
  "sqlalchemy~=1.4.48",
  "stringcase~=1.2.0",
  "werkzeug~=2.3.4"
]

[project.urls]

Homepage = "https://github.com/Voog/pyvoog"
Issues = "https://github.com/Voog/pyvoog/issues"

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

packages = ["src/pyvoog"]
